# ccdashboard_server

./: .dockerignore  .env.deploy.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
backend/: .env.example  .gitignore  CLAUDE.md  pyproject.toml
backend/app/: auth.py  config.py  db.py  enrichment.py  ingest.py  litellm_source.py  live.py  main.py  metrics.py  models.py  routes_dashboard.py  snapshots.py
backend/tests/: conftest.py  test_auth.py  test_enrichment.py  test_ingest.py  test_litellm_source.py  test_live.py  test_metrics.py
backend/tests/fixtures/: payload.json
frontend/: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.node.json  vite.config.ts
frontend/shots/: capture.cjs
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  sse.ts
frontend/src/components/: hud.tsx
frontend/src/lib/: format.ts
frontend/src/pages/: History.tsx  Leaderboard.tsx  Login.tsx  TeamDetail.tsx  TechTooling.tsx  WarRoom.tsx
frontend/tests/: dashboard.spec.ts  helpers.ts  login.spec.ts  tech.spec.ts
